Mejorar fotos instalaciones en home

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -182,19 +182,19 @@
     <div class="fotos">
           <div class="row gy-4 gx-4">
             <div class="col md-4">
-              <img src="assets\img\centro\entrada2_.png" alt="Foto 2" class="img-fluid">
+              <img src="assets\img\centro\entrada2_.png" alt="Foto 2"  width="250" height="250">
             </div>
 
             <div class="col md-4">
-              <img src="assets\img\centro\salaGris.png" alt="Foto 2" class="img-fluid">
+              <img src="assets\img\centro\salaGris.png" alt="Foto 2" width="250" height="250">
            </div>
 
            <div class="col md-4">
-            <img src="assets\img\centro\salaPista2.jpg" alt="Foto 2" class="img-fluid">
+            <img src="assets\img\centro\salaPista2.jpg" alt="Foto 2" width="250" height="250">
          </div>
 
          <div class="col md-4">
-          <img src="assets\img\centro\maquinas.png" alt="Foto 2" class="img-fluid">
+          <img src="assets\img\centro\maquinas.png" alt="Foto 2" width="250" height="250">
        </div>
       
 
