--- a/src/app/components/instalaciones/instalaciones.component.html
+++ b/src/app/components/instalaciones/instalaciones.component.html
@@ -46,7 +46,7 @@
           </div>
 
           <div class="carousel-item" data-bs-interval="3000">
-            <img class="d-block w-100"  src="assets\img\centro\pista.png" alt="pista">
+            <img class="d-block w-100"  src="assets\img\centro\salaPista2.jpg" alt="pista">
               <div class="carousel-caption d-none d-md-block">
                 <h1></h1>
                 <p> </p>
