--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -21,10 +21,40 @@
     <br>
     <a href="#" routerLink="/formulario" routerLinkActive="active" type="button" class="btn btn-light btn-lg" style="border-radius: 0px!important;" (click)="scrollToTop()"><strong>CONSEGUIR OFERTA</strong></a>
     <br>
-    <span>*Aplica Condiciones</span>
+    <p>*Aplica Condiciones</p>
   </div>
 
 </div>
+
+
+<!-- prueba oferta -->
+
+<!-- <div class="container-fluid">
+  
+
+  <div class="OfertaEspecial" style="border: 2px solid #007bff; padding: 20px; border-radius: 10px;">
+    <h1 style="color: #007bff;">OFERTA DEL MES</h1>
+    <br>
+    <p>Date de alta con un familiar –  amig&#64; – vecin&#64;</p>
+    <br>
+    <h2 class="Mensualidad" style="color: #007bff;">OBTÉN 20% DESCUENTO DURANTE 3 MESES CADA UNO</h2>
+    <br>
+    <div class="CaracteristicasOferta">
+      <p>Clase gratuita</p>
+      <p>Medición Inbody</p>
+      <p>Valoración de Fisioterapia</p>
+      <p>Sin matrícula</p>
+    </div>
+    <br>
+    <p>Has click en "Conseguir Oferta" <br></p>
+    <br>
+    <a href="#" routerLink="/formulario" routerLinkActive="active" type="button" class="btn btn-primary btn-lg" style="border-radius: 0px!important; background-color: #007bff; border-color: #007bff;"><strong>CONSEGUIR OFERTA</strong></a>
+    <br>
+    <span style="color: #007bff;">*Aplica Condiciones</span>
+  </div>
+
+</div> -->
+
 
 <section class="DatosContacto">
   <div class="row">
