--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -125,7 +125,7 @@
 
           <!-- -active primera imagen del carousel por dfecto y velocidad del carousel -->
           <div class="carousel-item active" data-bs-interval="3000" >
-            <img class="d-block w-100" src="assets\img\servicios\fisio2.png"  alt="Fisioterapia">
+            <img class="d-block w-100" src="assets\img\servicios\fisio.png"  alt="Fisioterapia">
              <!-- titulo- texto imagen  --ojo clase d-none>> indica que según tamaño pantalla texto aparace o no  -->
               <div class="carousel-caption d-none d-md-block">
                 <h1 >FISIOTERAPIA</h1>
@@ -134,7 +134,7 @@
           </div>
 
           <div class="carousel-item" data-bs-interval="3000">
-            <img class="d-block w-100"  src="assets/img/servicios/ePersonal3.png"  alt="ePersonal">
+            <img class="d-block w-100"  src="assets/img/servicios/ePersonal.png"  alt="ePersonal">
             <div class="carousel-caption d-none d-md-block">
               <h1>ENTRENAMIENTO PERSONAL</h1>
               <p> Adaptado a tus necesidades y objetivos</p>
@@ -198,16 +198,24 @@
        </div>
       
 
-
+       <div class="row">
+        <div class="col m-4">
+          <h1 class="display-6  text-center">ESCANEA EL QR PARA CONOCERNOS</h1>
+          <div class="col text-center">
+            <img src="assets\img\QR Marva Sport Center Fachada.jpg"  width="100" height="100">
+ 
+          </div>
+         
+            
+        </div>
       </div>
 
-      <div class="container px-4 m4">
-        <p class="lead mb-4" style="margin-top:2rem; margin-bottom: 2rem;">ESCANEA EL QR PARA CONOCERNOS </p>
-         <img src="assets\img\QR Marva Sport Center Fachada.jpg"width="100" height="100"> 
-      </div>
+  </div>
+
+     
 
 
-    </div>
+</div>
       
       
         
