--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -67,3 +67,13 @@ a{
 .fotos{
     margin-top: 3rem;
 }
+
+
+
+/* homeInstalaciones */
+
+#colQr {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
