Cambiar fondo de  oferta

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,7 +8,7 @@
     <br>
     <p>Date de alta con un familiar –  amig&#64; – vecin&#64;</p>
     <br>
-    <h2 class="Mensualidad">OBTÉN 20% DESCUENTO DURANTE 3 MESES CADA UNO</h2>
+    <h2 class="Mensualidad">20% DESCUENTO DURANTE 3 MESES CADA UNO</h2>
     <br>
     <div class="CaracteristicasOferta">
       <p>Clase gratuita</p>
