--- a/src/app/components/servicios/servicios.component.html
+++ b/src/app/components/servicios/servicios.component.html
@@ -42,20 +42,20 @@
   <h3 style="text-align: center;">SERVICIOS ADICIONALES</h3>
   <br>
   <div style="display: flex; justify-content: center; background: linear-gradient(rgba(55, 55, 67, 0.748), rgb(0, 115, 255)); border-radius: 2%; padding: 15px;">
-    <div class="card" style="width: 18rem; margin-right: 200px;">
+    <div class="card" style="width: 18rem; margin-right: 100px;">
       <img src="assets\img\servicios\fisio.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">FISIOTERAPIA</h5>
         <p class="card-text">Recupera tu bienestar: Servicios de Fisioterapia dedicados a tu salud y vitalidad</p>
-        <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px;" (click)="scrollToTop()">Ver mas</a>
+        <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px; margin-top: 255px;" (click)="scrollToTop()">Ver mas</a>
       </div>
     </div>
-    <div class="card" style="width: 400px; margin-right: 200px;">
-      <img src="assets\img\servicios\nutri4.jpg" class="card-img-top" alt="..." style="height: 445px; width: 400px;">
+    <div class="card" style="width: 18rem; margin-right: 100px;">
+      <img src="assets\img\servicios\nutri4.jpg" class="card-img-top" alt="..." style="height: 445px; width: 18rem;">
       <div class="card-body">
         <h5 class="card-title">NUTRICIONISTA</h5>
         <p class="card-text">Alimentar tu bienestar y potenciar tu salud desde adentro hacia afuera</p>
-        <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 260px;" (click)="scrollToTop()">Ver mas</a>
+        <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px; margin-top: 30px;" (click)="scrollToTop()">Ver mas</a>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
@@ -63,7 +63,7 @@
       <div class="card-body">
         <h5 class="card-title">ENTRENAMIENTO LIBRE</h5>
         <p class="card-text">Cuenta con todas nuestras máquinas y demas equipo para realizar tus actividades</p>
-        <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px;" (click)="scrollToTop()">Ver mas</a>
+        <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px; justify-content: end;" (click)="scrollToTop()">Ver mas</a>
       </div>
     </div>
   </div>
