Cambio de imagen fisio, ya que la otra no era del mismo tamaño y se distorsionaba

--- a/src/app/components/servicios/servicios.component.html
+++ b/src/app/components/servicios/servicios.component.html
@@ -43,11 +43,11 @@
   <br>
   <div style="display: flex; justify-content: center; background: linear-gradient(rgba(55, 55, 67, 0.748), rgb(0, 115, 255)); border-radius: 2%; padding: 15px;">
     <div class="card" style="width: 18rem; margin-right: 100px;">
-      <img src="assets\img\servicios\fisio.png" class="card-img-top" alt="...">
+      <img src="assets\img\servicios\FISIOOOO.jpg" class="card-img-top" alt="..." style="height: 450px;">
       <div class="card-body">
         <h5 class="card-title">FISIOTERAPIA</h5>
         <p class="card-text">Recupera tu bienestar: Servicios de Fisioterapia dedicados a tu salud y vitalidad</p>
-        <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px; margin-top: 255px;" (click)="scrollToTop()">Ver mas</a>
+        <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px;" (click)="scrollToTop()">Ver mas</a>
       </div>
     </div>
     <div class="card" style="width: 18rem; margin-right: 100px;">
