--- a/src/app/components/servicio/servicio.component.html
+++ b/src/app/components/servicio/servicio.component.html
@@ -8,10 +8,11 @@
 <br>
 <h1 style="text-align: center;"><b>AQUI PUEDES ENCONTRAR NUESTROS SERVICIOS UN POCO MAS DETALLADOS</b></h1>
 <br>
-<div class="fondocartas">
+<div class="p-5 m-4 bg-light rounded-3">
+  <div class="row gy-4 justify-content-space-evenly" style="margin: 20px;">
     @for (servicio of serviciosGYM.servicios; track servicio) {
-        <div class="col-3" style="margin-bottom: 20px; margin-left: 588px;">
-            <div class="card" style="width: 18rem; background: linear-gradient(rgba(55, 55, 67, 0.748), rgb(0, 115, 255)); border-radius: 2%; padding: 15px;">
+        <div class="col-3">
+            <div class="card" style="width: 18rem; background: linear-gradient(rgba(55, 55, 67, 0.748), rgb(0, 115, 255)); border-radius: 2%;">
                 <div class="card-header"><b>
                   SERVICIO DISPONIBLE
                 </b></div>
@@ -25,8 +26,12 @@
         <br>
         <br>
     }
+    <!-- <a href="#" routerLink="/formulario" routerLinkActive="active" type="button" class="btn" style="border-radius: 0px!important;" (click)="scrollToTop()"><strong>CONTRATAR SERVICIO</strong></a> -->
+    <button routerLink="/formulario" type="submit" class="btn btn-primary">CONTRATAR SERVICIO</button>
+
+
+</div>
 </div>
 
-
 <!-- prueba  -->
-
+<!-- padding: 15px; -->
