--- a/src/app/components/servicios/servicios.component.html
+++ b/src/app/components/servicios/servicios.component.html
@@ -1,3 +1,8 @@
+
+
+<!-- 
+SERVICIOS LUIS -->
+
 <div class="p-4 my-9" style="align-items: center;">
   <br>
   <br>
@@ -70,6 +75,245 @@
   <br>
   <!-- <br>
   <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 600px;">Mas detalles</a> -->
+</div>
+
+
+
+
+
+
+
+<!-- PRUEBA  -->
+
+
+<div class="diana">
+  <div class="px-5 py-5 my-4">
+    <div class="flex-grow-1 ms-3"> 
+        <h1 class="display-4 fw-bold text-center" style="margin-bottom: 2.5em;">  NUESTROS SERVICIOS</h1>
+      </div>
+        
+        <div class="row">
+            <div class="col">
+              <div class ="p-5 mb-4 bg-light rounded-3">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-inner">
+                    <h1 class="display-5 fw-bold text-center">Fisioterapia Deportiva </h1> 
+                    
+                
+                    <div class="carousel-item active">
+                      <img src="./assets/img/servicios/fisio2.jpg" class="d-block w-75 mx-auto" alt="...">
+                    </div>
+
+                    <div class="carousel-item active">
+                      <img src="assets/img/servicios/fisioEPI.jpg" class="d-block w-75 mx-auto" alt="...">
+                    </div>
+
+                    <div class="carousel-item active">
+                      <img src="assets/img/servicios/keiser.jpg" class="d-block w-75 mx-auto" alt="..." >
+                    </div>
+
+                
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                
+
+                </div>
+              </div>
+            </div>
+          </div>
+            
+    
+      <div class="moreInfo">
+        <div  class ="p-2 bg-light rounded-3">  
+            <!-- <p class="text-center"></p> -->
+            <p class="text-center justify-content">
+              Recupera tu bienestar con nuestros tratamientos personalizados de <strong>Fisioterapia para rehabilitación, readaptación, tratamiento del dolor y prevención de lesiones.</strong>  Tenemos un Equipo de expertos que  ofrece técnicas como la punción seca, EPI, Neuromodulación percutánea, la electroestimulación transcraneal."
+            <br>
+            <br>
+              <a id="btnVer" routerLink="/servicio" class="btn btn-primary" type="button" (click)="scrollToTop()">Ver mas</a>
+            </p>
+          <!-- <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 440px;" (click)="scrollToTop()">Ver mas</a> -->
+        </div>
+      </div> 
+    </div>
+    <br>
+    <br>
+    <br>
+
+    <div class="row">
+      <div class="col">
+        <div class ="p-5 mb-4 bg-light rounded-3">
+          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <h1 class="display-5 fw-bold text-center">Entrenamiento Personal </h1> 
+              
+              
+
+              <div class="carousel-item active">
+                <img src="assets/img/servicios/ePersonal3.png" class="d-block w-75 mx-auto" alt="...">
+              </div>
+
+              <div class="carousel-item active">
+                <img src="assets/img/servicios/ePersonal2.png" class="d-block w-75 mx-auto" alt="2">
+              </div>
+
+              <div class="carousel-item active">
+                <img src="assets/img/servicios/ePersonal3_.png" class="d-block w-75 mx-auto" alt="..." >
+              </div>
+
+          
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+          
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+        <div class="moreInfo">
+              <div  class ="p-2 bg-light rounded-3">  
+                  <!-- <p class="text-center"></p> -->
+                  <p class="text-center justify-content">
+                    "Nuestros entrenadores expertos diseñan programas adaptados a tus necesidades y objetivos específicos. Obtén resultados óptimos, mejora tu estado físico y alcanza tus metas de forma eficaz y segura.
+                  <br>
+                  <br>
+                    <a id="btnVer" routerLink="/servicio" class="btn btn-primary" type="button" (click)="scrollToTop()">Ver mas</a>
+                  </p>
+                <!-- <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 440px;" (click)="scrollToTop()">Ver mas</a> -->
+              </div>
+        </div>  
+      </div>
+
+      <br>
+      <br>
+      <br>
+      <br>
+          
+            <div class="row">
+                <div class="col">
+                  <div class ="p-5 mb-4 bg-light rounded-3">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                      <div class="carousel-inner">
+                        <h1 class="display-5 fw-bold text-center">Nutrición</h1> 
+                        
+                    
+                        <div class="carousel-item active">
+                          <img src="assets/img/servicios/nutri4.jpg" class="d-block w-75 mx-auto" alt="...">
+                        </div>
+      
+                        <div class="carousel-item active">
+                          <img src="assets/img/servicios/Nutri3.jpg" class="d-block w-75 mx-auto" alt="...">
+                        </div>
+      
+                        <!-- <div class="carousel-item active">
+                          <img src="assets/img/servicios/keiser.jpg" class="d-block w-75 mx-auto" alt="..." >
+                        </div> -->
+      
+                    
+                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                      </button>
+                    
+      
+                    </div>
+                  </div>
+                </div>
+              </div>
+                
+        
+          <div class="moreInfo">
+            <div  class ="p-2 bg-light rounded-3">  
+                <!-- <p class="text-center"></p> -->
+                <p class="text-center justify-content">
+                  Aprende a comer con nuestros profesionales de la nutrición, diseñamos <strong>Menus Semanales Personalizados y adaptado a tus necesidades, gustos</strong> y para conseguir tus objetivos. <br> ¿Quieres saber si lo que comes es lo que deberías? contrata el servicio de <strong>Valoración Alimentación.</strong> 
+                <br>
+                <br>
+                  <a id="btnVer" routerLink="/servicio" class="btn btn-primary" type="button" (click)="scrollToTop()">Ver mas</a>
+                </p>
+              <!-- <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 440px;" (click)="scrollToTop()">Ver mas</a> -->
+            </div>
+
+
+
+
+        
+    </div>
+
+    
+
+  </div>
+
+
+        <div class="row">
+            <div class="col">
+              <div class ="p-5 mb-4 bg-light rounded-3">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-inner">
+                    <h1 class="display-5 fw-bold text-center">Clases Grupales </h1> 
+                    
+                
+                    <div class="carousel-item active">
+                      <img src="assets/img/servicios/MIT.png" class="d-block w-75 mx-auto" alt="...">
+                    </div>
+
+                    <div class="carousel-item active">
+                      <img src="assets/img/servicios/TRAINING.png" class="d-block w-75 mx-auto" alt="...">
+                    </div>
+
+                    <div class="carousel-item active">
+                      <img src="assets/img/servicios/keiser.jpg" class="d-block w-75 mx-auto" alt="..." >
+                    </div>
+
+                
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                
+
+                </div>
+              </div>
+            </div>
+          </div>
+            
+    
+      <div class="moreInfo">
+        <div  class ="p-2 bg-light rounded-3">  
+            <!-- <p class="text-center"></p> -->
+            <p class="text-center justify-content">
+              Recupera tu bienestar con nuestros tratamientos personalizados de <strong>Fisioterapia para rehabilitación, readaptación, tratamiento del dolor y prevención de lesiones.</strong>  Tenemos un Equipo de expertos que  ofrece técnicas como la punción seca, EPI, Neuromodulación percutánea, la electroestimulación transcraneal."
+            <br>
+            <br>
+              <a id="btnVer" routerLink="/servicio" class="btn btn-primary" type="button" (click)="scrollToTop()">Ver mas</a>
+            </p>
+          <!-- <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 440px;" (click)="scrollToTop()">Ver mas</a> -->
+        </div>
+      </div> 
+    </div>
+  <br>
 </div>
 
 
