--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -91,21 +91,6 @@
 </section>
 
 
-
-
- <!-- <div class="container-md">
-  <div class="container-fluid juatify-content">
-
-  <h2 > Servicios Destacados</h2>
-  <p>SERVICIOS DE MEDICINA DEPORTIVA Y ENTRENAMIENTO PERSONAL
-    En Marva Sport Center hemos puesto toda nuestra experiencia y recursos en el diseño de instalaciones y programas de rehabilitación y entrenamiento personal, que se desarrollan de manera guiada y progresiva bajo la supervisión de profesionales cualificados. 
-    Vamos a acompañarte desde el primer minuto, porque sabemos que un porcentaje muy alto de usuarios,
-     pacientes y deportistas, abandona su objetivo a medio/ largo plazo por la ausencia de obtención de resultados </p>
-
-  
-</div>
- </div> -->
-
 <!-- Carousel -->
 <section class="carousel">
   <div class="container px-4 m4">
@@ -125,7 +110,7 @@
 
           <!-- -active primera imagen del carousel por dfecto y velocidad del carousel -->
           <div class="carousel-item active" data-bs-interval="3000" >
-            <img class="d-block w-100" src="assets\img\servicios\fisio.png"  alt="Fisioterapia">
+            <img class="d-block w-100" src="assets\img\servicios\fisio2.jpg"  alt="Fisioterapia">
              <!-- titulo- texto imagen  --ojo clase d-none>> indica que según tamaño pantalla texto aparace o no  -->
               <div class="carousel-caption d-none d-md-block">
                 <h1 >FISIOTERAPIA</h1>
@@ -170,7 +155,7 @@
     </div>
 </section >
 
-<div class="p-5 m4 bg-light rounded-3">
+<div class="p-5 m-4 bg-light rounded-3">
       <div class="flex-grow-1 ms-3">
         <div class="container">
 
