--- a/src/app/components/servicio/servicio.component.html
+++ b/src/app/components/servicio/servicio.component.html
@@ -5,10 +5,10 @@
 <!-- <div style="margin-top: 20px; margin-left: 560px;">
     <h1>{{serviciosGYM.nombre}}</h1>
 </div> -->
-<br>
-<br>
-<div style="margin-left: 600px;">
-    @for (servicio of serviciosGYM.servicios; track servicio) {
+<!-- <br>
+<br> -->
+<!--  <div style="margin-left: 600px;"> -->
+    <!-- @for (servicio of serviciosGYM.servicios; track servicio) {
         <div class="col-3">
             <div class="card" style="width: 18rem; background: linear-gradient(rgba(55, 55, 67, 0.748), rgb(0, 115, 255)); border-radius: 2%; padding: 15px;">
                 <div class="card-header"><b>
@@ -24,8 +24,6 @@
         <br>
         <br>
     }
-</div>
+</div> -->
 
-
-<!-- prueba  -->
 
